samples/_failures_safe/1761479408_531363_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_667bcd9f.c: In function ‘main’:
./samples/SAFE/__tmp_667bcd9f.c:151:9: error: expected declaration or statement at end of input
  151 |         return 1;
      |         ^~~~~~
./samples/SAFE/__tmp_667bcd9f.c:151:9: error: expected declaration or statement at end of input
